feat: subindo alterações, camuflando tokens e keys que devem ficar seguras e também ajustando algumas coisas relacionadas aos elif

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-MONGO_URI = "mongodb+srv://pgguilherme337:sehloiro123@cluster0.bqhb9b1.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI = ""
+CHAT_API = ""
+ACCOUNT_SID = ""
+AUTH_TOKEN = ""
+
+
 
